[package]
name = "axiograph"
version = "0.1.0"
edition = "2021"
description = "A Rust program that visualizes the structure of complex axioms using GPT-4. Give it an axiom and a \"depth\", and it will generate a summary based on all established sub-axioms and a graph using graphviz. Explore the relationships between axioms and gain new insights with ease."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.26"
clap = { version = "4.3.10", features = ["derive", "env"] }
colored = "2.0.4"
evilcorp_secondpilot = "2.3.0"
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
